fix content clipping outside projector

--- a/index.css
+++ b/index.css
@@ -78,12 +78,12 @@ hr {
 
 #content-container {
     position: absolute;
-    box-sizing: border-box;
-    width: 100%;
-    height: 100%;
+    top: 20px;
+    left: 20px;
+    width: calc(100% - 40px);
+    height: calc(100% - 60px);
+    padding: 20px;
     overflow: hidden;
-
-    padding: 40px 40px 60px 40px;
 }
 
 #content-container > .container-fluid {
